Install tmux, config vim-go

--- a/ansible/setup-dotfiles.yaml
+++ b/ansible/setup-dotfiles.yaml
@@ -12,3 +12,4 @@
     - include: tasks/linkdotfiles.yaml
     - include: tasks/vim.yaml
     - include: tasks/ohmyzsh.yaml
+    - include: tasks/tmux.yaml
