--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -14,6 +14,9 @@ set -sg escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
 
+# Set vim mode while in copy mode
+setw -g mode-keys vi
+
 # Set mouse support for switching panes/windows
 setw -g mode-mouse on
 set -g mouse-select-pane on
@@ -36,6 +39,26 @@ bind C-s send-prefix
 # Bind r to reload tmux.conf
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf file"
+
+# Copy && paste mode
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+#-------------------------------------------------------------------------------
+#  Vim-tmux-navigator Settings
+#-------------------------------------------------------------------------------
+
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 #-------------------------------------------------------------------------------
 #  Panes & Window Binds Settings
