--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,14 +1,6 @@
 #-------------------------------------------------------------------------------
 #  General Settings
 #-------------------------------------------------------------------------------
-# Set the default terminal mode to 256color
-set -g default-terminal "screen-256color"
-
-# Set scrollback size
-set -g history-limit 10000
-
-# Set escape-time to slow down the delay between commands
-set -sg escape-time 1
 
 # Start window and pane numbering at 1
 set -g base-index 1
@@ -84,12 +76,6 @@ bind -r C-l select-window -t :+
 #  Status bar && Message Settings
 #-------------------------------------------------------------------------------
 
-# add support for utf-8
-set -g status-utf8 on
-
-# update the status bar every sixty seconds
-set -g status-interval 60
-
 # set the default status color
 set -g status-bg black
 set -g status-fg white
@@ -115,3 +101,13 @@ set -g window-status-current-fg white
 # set the color for messages (PREFIX+:)
 set -g message-bg black
 set -g message-fg white
+
+##-------------------------------------------------------------------------------
+#  Install TMUX plugins
+#-------------------------------------------------------------------------------
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# restore vim sessions
+set -g @resurrect-strategy-vim 'session'
+run-shell ~/.tmux/plugins/tpm/resurrect.tmux
