--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -29,8 +29,8 @@ set -g prefix C-s
 bind C-s send-prefix
 
 # Bind r to reload tmux.conf
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf file"
+unbind R
+bind R source-file ~/.tmux.conf \; display "Reloaded tmux.conf file"
 
 # Copy && paste mode
 unbind [
@@ -110,4 +110,5 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # restore vim sessions
 set -g @resurrect-strategy-vim 'session'
-run-shell ~/.tmux/plugins/tpm/resurrect.tmux
+run '~/.tmux/plugins/tpm/tpm'
+
