Update Java, Setup scrolling

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -9,8 +9,11 @@ set -g pane-base-index 1
 # Set vim mode while in copy mode
 setw -g mode-keys vi
 
+# Sane scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 # Set mouse support for switching panes/windows
-setw -g mode-mouse on
+set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
