--- a/ansible/setup-dotfiles.yaml
+++ b/ansible/setup-dotfiles.yaml
@@ -9,7 +9,10 @@
     #- { role: common }
 
   tasks:
+    - include: tasks/pip.yaml
     - include: tasks/linkdotfiles.yaml
     - include: tasks/vim.yaml
     - include: tasks/ohmyzsh.yaml
     - include: tasks/tmux.yaml
+    - include: tasks/pip.yaml
+    - include: tasks/did.yaml
