--- a/ansible/tasks/brewdependencies.yaml
+++ b/ansible/tasks/brewdependencies.yaml
@@ -1,6 +1,9 @@
   - name: Get sure terminal-notifier is available
     homebrew: name=terminal-notifier state=present
 
+  - name: Get sure PyThon is available
+    homebrew: name=python state=present
+
   - name: Get sure WGET is available
     homebrew: name=wget state=present
 
