--- a/ansible/setup-dotfiles.yaml
+++ b/ansible/setup-dotfiles.yaml
@@ -2,8 +2,10 @@
 - hosts: localhost
 
   pre_tasks:
-    - include: tasks/brewdependencies.yaml
+    - include: tasks/mac/brewdependencies.yaml
       when: ansible_distribution == "MacOSX"
+    - include: tasks/linux/dnfdependencies.yaml
+      when: ansible_distribution == "Fedora" and ansible_distribution_major_version|int >= 22
 
   roles:
     #- { role: common }
