--- a/ansible/tasks/mac/brewdependencies.yaml
+++ b/ansible/tasks/mac/brewdependencies.yaml
@@ -1,40 +1,40 @@
-  - name: Get sure terminal-notifier is available
+  - name: Mac brew: Get sure terminal-notifier is available
     homebrew: name=terminal-notifier state=present
 
-  - name: Get sure WGET is available
+  - name: Mac brew: Get sure WGET is available
     homebrew: name=wget state=present
 
-  - name: Make suere GIT is available
+  - name: Mac brew: Make suere GIT is available
     homebrew: name=git state=present
 
-  - name: Make sure CURL is available
+  - name: Mac brew: Make sure CURL is available
     homebrew: name=curl state=present
 
-  - name: Make sure ZSH is available
+  - name: Mac brew: Make sure ZSH is available
     homebrew: name=zsh state=present
 
-  - name: Make sure ZSH completions is available
+  - name: Mac brew: Make sure ZSH completions is available
     homebrew: name=zsh-completions state=present
 
-  - name: Make sure CTAGS  is available
+  - name: Mac brew: Make sure CTAGS  is available
     homebrew: name=ctags state=present
 
-  - name: Make sure CMAKE  is available
+  - name: Mac brew: Make sure CMAKE  is available
     homebrew: name=cmake state=present
 
-  - name: Make sure TMUX  is available
+  - name: Mac brew: Make sure TMUX  is available
     homebrew: name=tmux state=present
 
-  - name: Make sure AG is available
+  - name: Mac brew: Make sure AG is available
     homebrew: name=ag state=present
 
-  - name: Make sure reattach-to-user-namespace is available
+  - name: Mac brew: Make sure reattach-to-user-namespace is available
     homebrew: name=reattach-to-user-namespace state=present
 
-  - name: Install MacVim
+  - name: Mac brew:Install MacVim
     homebrew: name=macvim state=linked install_options=with-override-system-vim
 
-  - name: Verify if VIM has lua support
+  - name: Mac shell:Verify if VIM has lua support
     shell: vim --version|grep -e "+lua"
     args:
       warn: false
@@ -42,19 +42,19 @@
     register: luaspt
     failed_when: luaspt.stderr
 
-  - name: Remove Vim without lua
+  - name: Mac brew: Remove Vim without lua
     homebrew: name=vim state=absent
     when: luaspt.rc != 0
 
-  - name: Install Vim with lua
+  - name: Mac brew: Install Vim with lua
     homebrew: name=vim state=latest install_options=with-lua
     when: luaspt.rc != 0
 
-  - name: Retrieve the current shell
+  - name: Mac shell: Retrieve the current shell
     command: echo $SHELL
     register: shell
 
-  - name: Set the Default shell to ZSH
+  - name: Mac shell: Set the Default shell to ZSH
     command: chsh -s /bin/zsh
     when: shell.stdout != "/bin/zsh"
 
