--- a/ansible/tasks/ohmyzsh.yaml
+++ b/ansible/tasks/ohmyzsh.yaml
@@ -1,4 +1,7 @@
 ---
   - name: Clone oh-my-zsh repo
     git: repo=https://github.com/robbyrussell/oh-my-zsh.git dest={{ lookup('env','HOME') }}/.oh-my-zsh depth=1
+
+  - name: Clone oh-my-zsh custom plugins
+    git: repo=https://github.com/chmouel/oh-my-zsh-openshift.git  dest={{ lookup('env','HOME') }}/.oh-my-zsh/custom/plugins/oc depth=1
     
